handle topic existed exception

--- a/streaming/.classpath
+++ b/streaming/.classpath
@@ -1,41 +1,42 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-  <classpathentry kind="src" path="src/main/java" including="**/*.java"/>
-  <classpathentry kind="src" path="src/main/resources" excluding="**/*.java"/>
-  <classpathentry kind="output" path="target/classes"/>
-  <classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.service/develop-SNAPSHOT/gateway.service-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.transport/develop-SNAPSHOT/gateway.transport-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.resource.address/develop-SNAPSHOT/gateway.resource.address-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.5/slf4j-log4j12-1.7.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5.jar"/>
-  <classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/community.license/2.20/community.license-2.20.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.security/develop-SNAPSHOT/gateway.security-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.server.spi/develop-SNAPSHOT/gateway.server.spi-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.util/develop-SNAPSHOT/gateway.util-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/mina.netty/develop-SNAPSHOT/mina.netty-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/test.util/develop-SNAPSHOT/test.util-develop-SNAPSHOT.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/k3po.junit/3.0.0-alpha-29/k3po.junit-3.0.0-alpha-29.jar"/>
-  <classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/net.tcp/1.1.0.9/net.tcp-1.1.0.9.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/kaazing/net.api/1.1.0.9/net.api-1.1.0.9.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast/1.9.4.8/hazelcast-1.9.4.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast-client/1.9.4.8/hazelcast-client-1.9.4.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast-cloud/1.9.4.8/hazelcast-cloud-1.9.4.8.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.6.2/gson-2.6.2.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka-clients/0.9.0.0/kafka-clients-0.9.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/xerial/snappy/snappy-java/1.1.1.7/snappy-java-1.1.1.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/jpountz/lz4/lz4/1.2.0/lz4-1.2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka_2.11/0.9.0.0/kafka_2.11-0.9.0.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/101tec/zkclient/0.7/zkclient-0.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/apache/zookeeper/zookeeper/3.4.6/zookeeper-3.4.6.jar"/>
-  <classpathentry kind="var" path="M2_REPO/jline/jline/0.9.94/jline-0.9.94.jar"/>
-  <classpathentry kind="var" path="M2_REPO/io/netty/netty/3.7.0.Final/netty-3.7.0.Final.jar"/>
-  <classpathentry kind="var" path="M2_REPO/com/yammer/metrics/metrics-core/2.2.0/metrics-core-2.2.0.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-xml_2.11/1.0.4/scala-xml_2.11-1.0.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/scala-lang/scala-library/2.11.7/scala-library-2.11.7.jar"/>
-  <classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-parser-combinators_2.11/1.0.4/scala-parser-combinators_2.11-1.0.4.jar"/>
-  <classpathentry kind="var" path="M2_REPO/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2.jar"/>
+	<classpathentry including="**/*.java" kind="src" path="src/main/java"/>
+	<classpathentry excluding="**/*.java" kind="src" path="src/main/resources"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.service/develop-SNAPSHOT/gateway.service-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.transport/develop-SNAPSHOT/gateway.transport-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.resource.address/develop-SNAPSHOT/gateway.resource.address-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-log4j12/1.7.5/slf4j-log4j12-1.7.5.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/slf4j/slf4j-api/1.7.5/slf4j-api-1.7.5.jar"/>
+	<classpathentry kind="var" path="M2_REPO/log4j/log4j/1.2.17/log4j-1.2.17.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/community.license/2.20/community.license-2.20.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.security/develop-SNAPSHOT/gateway.security-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.server.spi/develop-SNAPSHOT/gateway.server.spi-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/gateway.util/develop-SNAPSHOT/gateway.util-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/mina.netty/develop-SNAPSHOT/mina.netty-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/test.util/develop-SNAPSHOT/test.util-develop-SNAPSHOT.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/k3po.junit/3.0.0-alpha-29/k3po.junit-3.0.0-alpha-29.jar"/>
+	<classpathentry kind="var" path="M2_REPO/junit/junit/4.12/junit-4.12.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/hamcrest/hamcrest-core/1.3/hamcrest-core-1.3.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/net.tcp/1.1.0.9/net.tcp-1.1.0.9.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/kaazing/net.api/1.1.0.9/net.api-1.1.0.9.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast/1.9.4.8/hazelcast-1.9.4.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast-client/1.9.4.8/hazelcast-client-1.9.4.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/hazelcast/hazelcast-cloud/1.9.4.8/hazelcast-cloud-1.9.4.8.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/google/code/gson/gson/2.6.2/gson-2.6.2.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka-clients/0.9.0.0/kafka-clients-0.9.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/xerial/snappy/snappy-java/1.1.1.7/snappy-java-1.1.1.7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/jpountz/lz4/lz4/1.2.0/lz4-1.2.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/kafka/kafka_2.11/0.9.0.0/kafka_2.11-0.9.0.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/101tec/zkclient/0.7/zkclient-0.7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/apache/zookeeper/zookeeper/3.4.6/zookeeper-3.4.6.jar"/>
+	<classpathentry kind="var" path="M2_REPO/jline/jline/0.9.94/jline-0.9.94.jar"/>
+	<classpathentry kind="var" path="M2_REPO/io/netty/netty/3.7.0.Final/netty-3.7.0.Final.jar"/>
+	<classpathentry kind="var" path="M2_REPO/com/yammer/metrics/metrics-core/2.2.0/metrics-core-2.2.0.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-xml_2.11/1.0.4/scala-xml_2.11-1.0.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/scala-lang/scala-library/2.11.7/scala-library-2.11.7.jar"/>
+	<classpathentry kind="var" path="M2_REPO/org/scala-lang/modules/scala-parser-combinators_2.11/1.0.4/scala-parser-combinators_2.11-1.0.4.jar"/>
+	<classpathentry kind="var" path="M2_REPO/net/sf/jopt-simple/jopt-simple/3.2/jopt-simple-3.2.jar"/>
+	<classpathentry kind="lib" path="geode-dependencies.jar"/>
+	<classpathentry kind="output" path="target/classes"/>
 </classpath>
