add kafka/geode lib to gateway

--- a/streaming/docker-compose/apache.kafka/Dockerfile
+++ b/streaming/docker-compose/apache.kafka/Dockerfile
@@ -1,11 +1,9 @@
 FROM centos:7
 
-COPY jre-8u92-linux-x64.rpm /tmp 
-COPY kafka_2.11-0.9.0.1.tgz /tmp
+COPY kafka_2.11-0.9.0.1.tgz jre-8u92-linux-x64.rpm /tmp/ 
 
 RUN yum -y update \
     && rpm -ivh /tmp/jre-8u92-linux-x64.rpm \
-    && echo $JAVA_HOME \
     && rm /tmp/jre-8u92-linux-x64.rpm \
     && cd / \
     &&  tar -zxvf /tmp/kafka_2.11-0.9.0.1.tgz \
@@ -15,8 +13,6 @@ WORKDIR /kafka_2.11-0.9.0.1
 
 EXPOSE 2181 9092
 
-COPY run_kafka.sh .
-RUN chmod 755 run_kafka.sh \
-    && cd /kafka_2.11-0.9.0.1
+# COPY run_kafka.sh .
 
 # ENTRYPOINT ./run_kafka.sh
