--- a/streaming/docker-compose/docker-compose.yml
+++ b/streaming/docker-compose/docker-compose.yml
@@ -66,4 +66,6 @@ gateway:
    environment:
 #    - GATEWAY_OPTS=-Dgeode.locator.name=locator
     - GATEWAY_OPTS=-DkafkaServers=kafka:9092 -Dgeode.locator.name=172.16.22.35
-
+   volumes:
+    - ./kazzing.gateway/scripts/:/scripts/
+   command: /scripts/startServer.sh 
